# Egor_Egor-

./: README.md
Aho_Corasick/: Aho_Corasick.pro  default.cpp  main.cpp
Aho_Corasick_joker/: main.cpp
Astar/: helpfile.h  main.cpp
DZ_OOP/: main.cpp  shape.xml
Ford_Fulkerson/: Ford_Fulkerson.pro  help.h  main.cpp
JAVA/first/src/com/human/: Human.java  Student.java
KMP/: main.cpp
QT/build-laba4-Desktop-Debug/: Makefile  laba4
QT/laba4/: a.out  laba4.pro  tree.h
QT/laba5/: a.out  avl_tree.h  laba5.pro  main.cpp
QT/robot/: main.cpp  robot.h  robot.pro
QT/share_inheritance/: cirqle.h  share.h
QT_C++/build-laba5-Desktop-Debug/: Makefile  laba5
QT_C++/build-robot-Desktop-Debug/: Makefile  robot
QT_C++/build-some_OO-Desktop-Debug/: Makefile  some_OO
QT_C++/laba5/: a.out  avl_tree.h  file.txt  function_for_print.h  laba5.pro  main.cpp  test.txt
QT_C++/robot/: help_function.h  robot.cpp  super_robot.h
QT_C++/some_OO/: main.cpp
QT_C++/some_experiment/: virtual_fugure.cpp
backtracking/: a.out  backtracking.pro  delete.h  main.cpp
const_iterator/: main.cpp
example/: main.cpp
greedyAlgorithm/: main.cpp
list/: main.cpp
loop_list/: main.cpp
newShape/: main.cpp  newShape.pro
papka/: CMakeLists.txt  Makefile.txt  average_of_numbers_sort.c  average_of_numbers_sort.h  delete_without_lower.c  delete_without_lower.h  delete_word.c  delete_word.h  input.c  input.h  main.c  print_title.c  print_title.h
shared_ptr/: main.cpp
vector/: main.cpp
